syntax = "proto3";
package reapchain.blockchain;

option go_package = "github.com/reapchain/reapchain-core/proto/reapchain/blockchain";

import "reapchain/types/block.proto";
import "reapchain/state/types.proto";

// BlockRequest requests a block for a specific height
message BlockRequest {
  int64 height = 1;
}

// NoBlockResponse informs the node that the peer does not have block at the requested height
message NoBlockResponse {
  int64 height = 1;
}

// BlockResponse returns block to the requested
message BlockResponse {
  reapchain.types.Block block = 1;
}

// StatusRequest requests the status of a peer.
message StatusRequest {
}

// StatusResponse is a peer response to inform their status.
message StatusResponse {
  int64 height = 1;
  int64 base   = 2;
}

message StateRequest {
  int64 height = 1;
}

message StateResponse {
  reapchain.state.State state = 1;
}

message NoStateResponse {
  int64 height = 1;
}

message Message {
  oneof sum {
    BlockRequest    block_request     = 1;
    NoBlockResponse no_block_response = 2;
    BlockResponse   block_response    = 3;
    StatusRequest   status_request    = 4;
    StatusResponse  status_response   = 5;
    StateRequest    state_request    = 6;
    StateResponse   state_response   = 7;
    NoStateResponse no_state_response = 8;
  }
}
